# FiveSou

./: .gitignore  Cargo.toml  LICENSE  README.md  design.md
benches/: bench_hand_scoring.rs
mahjong_core/: Cargo.toml
mahjong_core/benches/: bench_hand_scoring.rs
mahjong_core/src/: composer.rs  errors.rs  hand.rs  state.rs  tiles.rs  yaku.rs
mahjong_core/tests/: ruleset_variations.rs
mahjong_simulator/: Cargo.toml
src/: composer.rs  conversions.rs  errors.rs  hand.rs  lib.rs  main.rs  rulesets.rs  scoring.rs  state.rs  tiles.rs  yaku.rs
tests/: ruleset_variations.rs
